--- a/css/main.css
+++ b/css/main.css
@@ -100,8 +100,8 @@ body {
 
 
 .me{
-    margin-top:14rem;
-    margin-left:69.5rem;
+    margin-top:-2.6rem;
+    margin-left:70rem;
 }
 
 .contact{
@@ -177,9 +177,9 @@ body {
 
 .dormify-logline,
 .tp-logline,
-.poster-logline,
-.riot-logline {
+.poster-logline {
     color: #707070;
+    font-size: 1rem;
     /* margin-top:-2.5rem; */
 }
 
