--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ body {
     color: black;
     letter-spacing: -.18rem;
     line-height:3.8rem;
-    max-width: 85.5rem;
+    max-width: 95%;
     margin-top: 5rem;
 }
 
@@ -313,6 +313,13 @@ body {
    
 }
 
+.case-study2 {
+    margin-top:6rem;
+    color:black;
+    margin-left: 3rem;
+   
+}
+
 
 
 .about {
@@ -321,9 +328,25 @@ body {
     color: #707070;
 }
 
+.about2 {
+    margin-left: .4rem;
+    margin-top:11.5rem;
+    color: #707070;
+}
+
+.view-project{
+    margin-top:-10rem;
+    color:white;
+    font-family: montreal;
+}
+
+.view-project:hover{
+ text-decoration:none;
+}
+
 .content {
     color:black;
-    margin-top:-12rem;
+    margin-top:-27rem;
     max-width: 39rem;
     line-height: 1.5rem;
 }
@@ -552,10 +575,18 @@ body {
     margin-top: -.9rem;
 }
 
+
 .content-heading2 {
     font-size: 2.1rem;
     max-width: 34rem;
     margin-top: -.9rem;
+    color:black;
+}
+
+.conference-heading{
+    font-size: 2.1rem;
+    max-width: 34rem;
+    margin-top:20rem;
     color:black;
 }
 
