--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -38,6 +38,12 @@
     gap: 1.6rem;
 }
 
+
+.about2 {
+    display: flex;
+    flex-direction: row;
+    gap: 1.6rem;
+}
 .content-container {
     display: grid;
     grid-template-columns: repeat(22, 18fr);
