--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,142 +1,39 @@
-
-
-.me{
-    display:flex;
+.header-row{
+    display: flex;
     flex-wrap: wrap;
-    justify-content: 95%;
     flex-direction: row;
-    gap:1rem;
+    gap:20rem;
 }
 
-.container1,
-.container2 {
+
+.info-title{
     display: flex;
-    flex-direction: row;
-    gap: 1.25rem;
     flex-wrap: wrap;
+    flex-direction: row;
+    gap:14.1rem;
 }
 
+.container, .container2{
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: row;
+    gap: 2rem;
+}
 
-.memories {
+.micro-para, .role-para{
     display: flex;
     flex-direction: row;
-    gap: 1.25rem;
+    gap:21rem;
 }
 
-.other-posters {
+.role-para{
     display: flex;
     flex-direction: row;
-    gap: 1.25rem;
+    gap:22.5rem;
 }
 
-/* .teammates {
-    display: flex;
-    flex-direction: column;
-    gap: -20rem;
-} */
-
-.about {
+.project-para{
     display: flex;
     flex-direction: row;
-    gap: 1.6rem;
-}
-
-
-.about2 {
-    display: flex;
-    flex-direction: row;
-    gap: 1.6rem;
-}
-.content-container {
-    display: grid;
-    grid-template-columns: repeat(22, 18fr);
-}
-
-.info{
-    display:grid;
-    grid-template-columns: repeat(22, 18fr);
-    column-gap: 20px;
-}
-
-.my-description{
-    grid-column: 1/9;
-}
-
-.contact{
-    grid-column: 14/16;
-}
-
-.content,
-.insight,
-.framing {
-    grid-column: 8/21;
-}
-
-.reframe1 {
-    grid-column: 8/18;
-}
-
-.reframe2, .reframe3 {
-    grid-column: 8/18;
-}
-
-.content2 {
-    grid-column: 8/18;
-}
-
-.hmw3 {
-    grid-column: 8/18;
-}
-
-.solu-context {
-    display: grid;
-    grid-template-columns: repeat(22, 18fr);
-}
-
-.content-heading1,
-.c10 {
-    grid-column: 8/20;
-}
-
-.content-heading2,
-.c17 {
-    grid-column: 8/20;
-}
-
-.sub-solu1 {
-    grid-column: 8/19;
-}
-
-.theme-solu {
-    display: flex;
-    flex-direction: column;
-}
-
-.themes-solu {
-    grid-column: 8/19;
-}
-
-.subheading {
-    flex-direction: column;
-}
-
-.reframe-cond {
-    grid-column: 8/21;
-}
-
-.content-r {
-    grid-column: 8/18;
-}
-
-.c22 {
-    grid-column: 8/19;
-}
-
-.reflection {
-    grid-column: 8/17;
-}
-
-.works{
-    display:flex;
-    flex-wrap: wrap;
+    gap:19rem;
 }
