--- a/css/main.css
+++ b/css/main.css
@@ -1,787 +1,156 @@
+/* Font sizes */
 h1 {
-    font-family: plan_semibold;
-    font-size: 3.5rem;
+    font-family: test-founders-grotesk-mono-regular;
+    font-size: 0.62rem;
 }
 
 h2 {
-    font-family: plan_semibold;
-    font-size: 2.5rem;
+    font-family: test-founders-grotesk-mono-regular;
+    font-size: 0.62rem;
 }
 
 h3 {
-    font-family: plan_semibold;
-    font-size: 1.6rem;
+    font-family: FoundersGrotesk-Medium;
+    font-size: 0.75rem;
+    letter-spacing: 0rem;
 }
 
-p {
-    font-family: montreal;
-    font-size:.8rem;
+h4 {
+    font-family: FoundersGrotesk-Regular;
+    font-size: 0.82rem;
+    letter-spacing: 0rem;
 }
 
+/* End of font sizes */
 
-/* navigation links */
+
+/* navigation link */
 nav {
-    position:fixed;
-    top:-8px;
-    left: -29px;
-    padding-left:3%;
+   
+    margin-top: 0rem;
+    letter-spacing: -3%;
+    padding-left: 1rem;
     width: 110%;
-    background-color: white;
-    /* background-color: #1C1C1C; */
-    color:black;
-    font-family: plan_semibold;
-    font-size: .9em;
-    border:1px solid black;
 
 }
+/* end of navigation link */
 
 body {
-    /* background-color: #1C1C1C; */
     background-color: white;
 }
 
-/* pushes all content to the left atomatically */
-/* home page css */
-.wrapper1 {
-    margin-top: 6rem;
-    margin-left: 1.7em;
+/* Claret's bio *fixed at the top* */
+.bio-heading{
+    line-height:1.1rem;
+    max-width: 30rem;
+    grid-column: 4/span 6;
+   
 }
 
-.wrapper2 {
-    margin-top: 5rem;
-    margin-left: 1.7em;
+/* End of Claret's bio */
+
+/* top nav *home btn and bio */
+.header-row{ 
+    position:fixed;
+    color:#AEAEAE;
 }
+/* end of top nav */
 
-.wrapper {
-    margin-left: 1.7em;
-}
-
-.wrapper-nav {
-    margin-left: 1.9em;
-
-}
-
-.bio-heading {
-    color: black;
-    letter-spacing: -.18rem;
-    line-height:3.8rem;
-    max-width: 95%;
-    margin-top: 5rem;
-}
-
-.my-description {
-    color: black;
-    margin-top:5rem;
-    max-width: 27rem;
-    line-height: 1.1rem;
-}
-
-.name-color {
-    color:black;
-    cursor: pointer;
-}
-
-.name-hover{
-    display: none;
-  }
-
-.img-me{
-    width:25%;
+/* image size (home) */
+.microite-img, .DDA-img{
     height:auto;
-}
-
-.name-color:hover ~ .name-hover{
-    display:block;
-    position:absolute;
-    transition: .5s ease;
-    cursor:pointer;
-   
-}
-
-
-.me{
-    margin-top:-2.6rem;
-    margin-left:70rem;
-}
-
-.contact{
-    margin-top:9rem;
-}
-
-.scroll-to{
-    margin-top:15rem;
-}
-
-.email_btn,
-.resume_btn {
-    display: inline-block;
-    border-radius:12px;
-    border: .9px solid black;
-    height:3em;
-    width: 9em;
-    background-color: transparent;
-    color: black;
-    transition-property: background-color;
-    transition-duration: 0.2s;
-}
-
-.email_btn:hover,
-.resume_btn:hover {
-    cursor: pointer;
-    background-color: black;
-    color:white;
-}
-
-.email, .resume{
-    color:black;
-}
-
-.project-list{
-    color:black;
-    font-family: plan_semibold;
-    margin-top:5rem;
-}
-.first-row {
-    margin-top: -5rem;
-}
-
-.container1 {
-    margin-top: 4rem;
-}
-
-.dormify-img {
-    display: flex;
-    width: 38rem;
-    height: 25.875rem;
-}
-
-.tp-img {
-    display: flex;
-    width: 48.6rem;
-    height: auto;
-}
-
-.poster-img {
-    display: flex;
-    width: 34.25rem;
-    height: 37.626rem;
-}
-
-/* riot-img {
-    width:20rem;
-    height:4rem;
-} */
-
-.project-dormify,
-.project-tp {
-    color:black;
-    margin-top: 2.1rem;
-}
-
-.dormify-logline,
-.tp-logline,
-.poster-logline {
-    color: #707070;
-    font-size: 1rem;
-    /* margin-top:-2.5rem; */
-}
-
-.dormify-heading,
-.tp-heading,
-.poster-heading,
-.riot-heading {
-    margin-bottom: -.7rem;
-    letter-spacing: -.05rem;
-}
-
-
-/* ending of home page css */
-
-/* beginning of poster.css */
-.nav2 {
-    position: fixed;
-    top: 0;
     width: 100%;
-    background-color:white;
-    color:white;
-    font-family: plan_semibold;
-    font-size: .9em;
+    max-width: 710px;
+    /* width="710" height="500" */
 
 }
 
-.prada {
-    justify-content: center;
-    align-items: center;
-    margin-top: 5rem;
-    padding-left: 19rem;
+/* home logline */
+.mc-logline{
+    color:#AEAEAE;
+    max-width: 15rem;
+    line-height:1.1rem;
+    margin-top:0rem;
 }
+/* end of logline */
 
-.memories {
-    margin-top: 1.85rem;
-}
-
-.other-posters {
-    margin-top: 1.85rem;
-}
-
-.poster-background {
-    background-color:white;;
-}
-
-.logo-link {
-    color: black;
-    text-decoration: none;
+.container{
+    padding-top:13rem;
+    padding-left: 1rem;
 }
 
 
-.poster-title {
-    letter-spacing: -.2rem;
-    margin-top: 7rem;
+/* microsite context paragrapghs padding */
+.micro-para, .role-para, .project-para{
+    padding-left: 1rem;
+    padding-top:13rem;
+    
 }
+/* End of context */
 
-/* ending of poster.css */
-
-/* beginning dormify.css */
-.nav3 {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color:white;
-    color: white;
-    font-family: plan_semibold;
-    font-size: .9em;
-
+/* context color */
+.micro-intro, .role-intro, .project-intro{
+    color:#AEAEAE;
 }
+/* end of context-color */
 
-.logo-link2 {
-    color:black;
-    text-decoration: none;
+
+/* microsite context paragrapghs */
+.micro-intro1, .role-intro1, .project-intro1{
+    line-height:1.1rem;
+    margin-top:0rem;
+    max-width: 30rem;
+    grid-column: 4/span 6;
+    color: #3B3B3B;
 }
+/* End of context */
 
-
-.d-heading {
-    margin-top: 6rem;
-    /* background-size: cover; */
-    /* position:absolute; */
-}
-
-.dormify-header {
-    color:white;
-    margin-top: -32rem;
-    font-size: 2.5rem;
-}
-
-.dormify-log {
-    color: #707070;
-    font-size: 1.125rem;
-    margin-top: -2.2rem;
-}
-
-.dormify-para {
-    color:white;
-    font-size: 1rem;
-    max-width: 31.125rem;
-    line-height: 1.5rem;
-    margin-top: 4.6rem;
-}
-
-.p-title{
-    font-family: montreal;
-    font-size:.9rem;
-}
-
-.p-para{
-    font-family: montreal;
-    font-size:1rem;
-}
-
-.heading-body {
-    margin-left: 3rem;
-}
-
-.mem {
-    color: #707070;
-    font-size: .9rem;
-}
-
-.mem-team {
-    color:black;
-    font-size: .9rem;
-}
-
-.case-study {
-    margin-top:12rem;
-    color:black;
-    margin-left: 3rem;
-   
-}
-
-.case-study2 {
-    margin-top:6rem;
-    color:black;
-    margin-left: 3rem;
-   
-}
-
-
-
-.about {
-    margin-left: .4rem;
-    margin-top: 9.6rem;
-    color: #707070;
-}
-
-.about2 {
-    margin-left: .4rem;
-    margin-top:11.5rem;
-    color: #707070;
-}
-
-.view-project{
+/* role */
+.role, .project-type{
     margin-top:-10rem;
-    color:white;
-    font-family: montreal;
+}
+/* end of role */
+
+.container2{
+    padding-top:4rem;
+    padding-left: 1rem;
+    max-width: 100%;
 }
 
-.view-project:hover{
- text-decoration:none;
+/* DDA video solution */
+.video{
+    margin-top:10rem;
+}
+/* end of video solution */
+
+/* The dutch culture paragraph */
+.the-dutch-culture{
+    padding-left:25rem;
+    margin-top:10rem;  
+    line-height:1.1rem;
+    max-width: 30rem;
+    grid-column: 4/span 6;
+    color: #3B3B3B;
 }
 
-.content {
-    color:black;
-    margin-top:-27rem;
-    max-width: 39rem;
-    line-height: 1.5rem;
+.the-dutch-culture2{
+    padding-left:25rem;
+    margin-top:4rem;  
+    line-height:1.1rem;
+    max-width: 30rem;
+    grid-column: 4/span 6;
+    color: #3B3B3B;
 }
+/* end of the paragraph */
 
-.content1{
-    color:black;
-    margin-top:-15rem;
-    max-width: 39rem;
-    line-height: 1.5rem;
+/* font size for "the dutch culture */
+.dutch-h{
+    font-size: 1.1rem;
 }
-
-.content2{
-    color:black;
-    margin-top:-1rem;
-    max-width: 39rem;
-    line-height: 1.5rem;
-}
+/* end of fint size */
 
 
-
-.content-heading {
-    font-size: 2.1rem;
-    color:black;
-}
-
-.c1,
-.c2,
-.c20 {
-    font-size: 1rem;
-}
-
-.c20{
-    color:black;
-}
-
-.c3 {
-    font-family: plan_light;
-    font-size: 1.125rem;
-    line-height: 1.37rem;
-    /* max-width:34rem; */
-}
-
-.c18 {
-    font-family: plan_light;
-    font-size: 1.125rem;
-    line-height: 1.37rem;
-    max-width: 36rem;
-    color:black;
-}
-
-.c19 {
-    font-size: .9rem;
-    font-family: plan_light;
-    margin-left: 18rem;
-    color:black;
-}
-
-.c4 {
-    font-size: 1rem;
-    padding-left: 2rem;
-    padding-top: 2.6rem;
-    max-width: 34rem;
-}
-
-.c5 {
-    font-size: 1rem;
-    padding-left: 2rem;
-    padding-top: 2.6rem;
-    max-width: 34rem;
-}
-
-.c6 {
-    font-size: 1rem;
-    padding-left: 2rem;
-    padding-top: 1rem;
-    max-width: 34rem;
-}
-
-.c7 {
-    margin-top: -.2rem;
-    font-size: 1rem;
-    line-height: 1.37rem;
-}
-
-.c8 {
-    font-size: 1rem;
-    /* padding-left:2rem; */
-    margin-top: -1.9rem;
-    padding-top: 2.6rem;
-    max-width: 34rem;
-    color:black;
-}
-
-.c9 {
-    font-family: plan_light;
-    font-size: 2rem;
-    line-height: 2.4rem;
-    color:black;
-}
-
-.hmw3,
-.hmw2 {
-    font-family: plan_light;
-    font-size: 2rem;
-    line-height: 2.4rem;
-    color:black;
-}
-
-.c15 {
-    font-size: 1rem;
-}
-
-.c16 {
-    font-size: 1rem;
-    padding-left: 2rem;
-    padding-top: 1rem;
-    max-width: 34rem;
-    line-height: 1.375rem;
-}
-
-.rect,
-.rect2,
-.rect3 {
-    border: 1px solid black;
-    border-radius: 10px;
-    fill: none;
-    width: 39rem;
-    height: 10.5rem;
-}
-
-.rect2,
-.rect3 {
-    margin-top: 2.6rem;
-}
-
-.rect4 {
-    border: 1px solid black;
-    border-radius: 10px;
-    fill: none;
-    width: 39rem;
-    height: 9rem;
-    margin-top: 2.5rem;
-}
-
-.rect5 {
-    border: 1px solid black;
-    border-radius: 10px;
-    fill: none;
-    width: 39rem;
-    height: 7rem;
-    margin-top: 2.5rem;
-}
-
-.rect6 {
-    border: 1px solid black;
-    border-radius: 10px;
-    fill: none;
-    width: 39rem;
-    height: 7rem;
-    margin-top: 2.6rem;
-}
-
-
-.num-rect {
-    background-color: white;
-    width: 35px;
-    height: 24px;
-    margin-left: 2rem;
+.quotes{
+    padding-left: 25rem;
     margin-top: 3rem;
-    font-size: 1rem;
 }
-
-.insight {
-    margin-top: 20rem;
-}
-
-.framing {
-    margin-top:-5rem;
-}
-
-.first-reframe{
-    font-size: 2.1rem;
-    max-width: 34rem;
-    margin-top:.5rem;
-    color:black;
-}
-.num {
-    color: black;
-    margin-left: .4rem;
-    /* margin-top:.9rem; */
-}
-
-.solu-context {
-    color:white;
-    margin-top: 5rem;
-}
-
-.c10,
-.c17,
-.c21,
-.c22 {
-    font-family: montreal;
-    max-width: 34rem;
-    line-height: 1.37rem;
-    font-size: 1rem;
-
-}
-
-.c22{
-    color:black;
-}
-
-.c10, .content-heading1{
-    color:black;
-}
-
-.c11, .c17 {
-    font-size: 1rem;
-    line-height: 1.37rem;
-    color:black;
-}
-
-.content-heading1 {
-    font-size: 2.1rem;
-    max-width: 34rem;
-    margin-top: -.9rem;
-}
-
-
-.content-heading2 {
-    font-size: 2.1rem;
-    max-width: 34rem;
-    margin-top: -.9rem;
-    color:black;
-}
-
-.conference-heading{
-    font-size: 2.1rem;
-    max-width: 34rem;
-    margin-top:20rem;
-    color:black;
-}
-
-.content-head {
-    font-size: 2.1rem;
-    max-width: 34rem;
-    margin-top:1rem;
-    color:black;
-}
-
-.content-head2 {
-    font-size: 2.1rem;
-    max-width: 34rem;
-    margin-top:-.5rem;
-    color:black;
-}
-
-.content-results {
-    font-size: 2.1rem;
-    max-width: 34rem;
-    margin-top: 8rem;
-}
-
-.img-solu1 {
-    width: 70%;
-    height: auto;
-    margin-left: 10rem;
-    margin-top: 22rem;
-
-}
-
-.img-solu2 {
-    width: 89%;
-    height: auto;
-    margin-left: 6rem;
-    margin-top: 22rem;
-
-}
-
-.img-solu3 {
-    width: 60%;
-    height: auto;
-    margin-left: 17rem;
-    margin-top: 8rem;
-
-}
-
-.img-solu4 {
-    width: 60%;
-    height: auto;
-    margin-left: 17rem;
-    margin-top: 8rem;
-}
-
-.img-solu5 {
-    width: 60%;
-    height: auto;
-    margin-left: 17rem;
-    margin-top: 8.5rem;
-}
-
-.img-solu6 {
-    width: 60%;
-    height: auto;
-    margin-left: 17rem;
-    margin-top: 25rem;
-}
-
-
-.t1 {
-    width: 46%;
-    height: auto;
-    margin-left: 0rem;
-    margin-top: -6rem;
-
-}
-
-.t2 {
-    width: 46%;
-    height: auto;
-    margin-left: 0rem;
-    margin-top: -6rem;
-}
-
-.t3 {
-    width: 46%;
-    height: auto;
-    margin-left: 0rem;
-    margin-top: -6.5rem;
-}
-
-.t4 {
-    width: 46%;
-    height: auto;
-    margin-left: 0rem;
-    margin-top: -23rem;
-}
-
-.content2 {
-    color: white;
-}
-
-.c12 {
-    color: black;
-    font-family: montreal;
-    max-width: 34rem;
-    line-height: 1.37rem;
-    font-size: 1rem;
-    padding-left: 2rem;
-    padding-top: 1.3rem;
-}
-
-.c13,
-.c14 {
-    font-size: 1rem;
-    line-height: 1.37rem;
-    color:black;
-}
-
-.r-para1,
-.r-para2 {
-    font-size: 1rem;
-    line-height: 1.37rem;
-}
-
-.solu-1 {
-    background-color: #D9D9D9;
-    width: 81rem;
-    height: 69rem;
-    margin-top: -16rem;
-    margin-left: 5rem;
-}
-
-.solu-2 {
-    background-color: #D9D9D9;
-    width: 81rem;
-    height: 136rem;
-    margin-top: -13rem;
-    margin-left: 5rem;
-}
-
-.solu-3 {
-    background-color: #D9D9D9;
-    width: 81rem;
-    height: 190rem;
-    margin-top: -19rem;
-    margin-left: 5rem;
-}
-
-.sub-solu1 {
-    color: #7A7A7A;
-    font-size: 1rem;
-    font-family: montreal;
-}
-
-.sub-solu2 {
-    color: #7A7A7A;
-    font-size: 1rem;
-    font-family: montreal;
-}
-
-.sub-solu3 {
-    color: #7A7A7A;
-    font-size: 1rem;
-    font-family: montreal;
-    margin-top: 14rem;
-}
-
-.content-r {
-    color:black;
-    margin-top: 2rem;
-}
-
-.reframe1 {
-    margin-top:-4rem;
-}
-
-.reframe2{
-    margin-top:3rem;
-}
-
-.reframe3{
-    margin-top:-5rem;
-}
-
-.subheading3 {
-    margin-top: -11rem;
-}
-
-.reflection {
-    margin-top: 8rem;
-    color:black;
-}
-
-/* end of dormify.css */
